--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-motion": "^0.5.2",
     "react-router": "3.x",
     "react-scripts": "1.0.17",
+    "react-waypoint": "^8.0.0",
+    "react-zoomy": "^1.1.1",
     "styled-components": "^2.4.0"
   },
   "scripts": {
