--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-image-parallax2": "^0.1.6",
     "react-motion": "^0.5.2",
     "react-router": "3.x",
     "react-scripts": "1.0.17",
