--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.0.17",
     "react-waypoint": "^8.0.0",
     "react-zoomy": "^1.1.1",
+    "really-smooth-scroll": "^2.1.1",
     "styled-components": "^2.4.0"
   },
   "scripts": {
