--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jennings824.github.io/portfolio",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-image-parallax2": "^0.1.6",
     "react-motion": "^0.5.2",
     "react-router": "3.x",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-waypoint": "^8.0.0",
     "react-zoomy": "^1.1.1",
