--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://jennings824.github.io/portfolio",
+  "homepage": "http://jennings824.github.io/portfolio/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -14,12 +14,18 @@
     "react-waypoint": "^8.0.0",
     "react-zoomy": "^1.1.1",
     "really-smooth-scroll": "^2.1.1",
-    "styled-components": "^2.4.0"
+    "styled-components": "^2.4.0",
+    "gh-pages": "^1.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
